Fix overflow issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -44,10 +44,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
-  position: relative;
   font-size: 1.6rem;
   background-color: var(--color-light-grayish-violet);
-  overflow: hidden;
 
   display: grid;
   place-items: center;
@@ -67,7 +65,8 @@ video {
 
 .main {
   width: 100%;
-  height: max-content;
+  min-height: 100%;
+  position: relative;
   overflow: hidden;
 
   display: grid;
@@ -112,7 +111,6 @@ video {
   }
 
   &__content {
-    margin: 1rem;
     width: min(90%, 87rem);
 
     display: flex;
@@ -157,7 +155,7 @@ video {
       content: "";
       background-color: var(--color-white);
       position: absolute;
-      width: 22.4rem;
+      width: 22.67rem;
       height: 4rem;
       display: block;
       border-radius: 1.5rem;
